refactor: translate a2hs

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,10 +1,15 @@
 {
+  "1) （四角から矢印が飛び出したマーク）をタップします。": "1) Press the 'Share' button on the menu bar.",
+  "2) 「ホーム画面に追加」をタップします。": "",
+  "このウェブサイトにはアプリ機能があります。ホーム画面に追加してフルスクリーンおよびオフラインで使用できます。": "",
   "このページを再読み込みします。": "Reload this page.",
   "アップデートが完了しました": "Success",
   "アップデートに失敗しました": "Failed",
   "アップデート中にエラーが起きました。": "An error occurred while updating.",
+  "キャンセル": "",
   "グ": "g",
   "シ": "ci",
+  "ホーム画面に追加": "",
   "ル": "le",
   "レ": "Re",
   "レシグル": "Recigle",
