--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,10 +1,15 @@
 {
+  "1) （四角から矢印が飛び出したマーク）をタップします。": "1) （四角から矢印が飛び出したマーク）をタップします。",
+  "2) 「ホーム画面に追加」をタップします。": "2) 「ホーム画面に追加」をタップします。",
+  "このウェブサイトにはアプリ機能があります。ホーム画面に追加してフルスクリーンおよびオフラインで使用できます。": "このウェブサイトにはアプリ機能があります。ホーム画面に追加してフルスクリーンおよびオフラインで使用できます。",
   "このページを再読み込みします。": "このページを再読み込みします。",
   "アップデートが完了しました": "アップデートが完了しました",
   "アップデートに失敗しました": "アップデートに失敗しました",
   "アップデート中にエラーが起きました。": "アップデート中にエラーが起きました。",
+  "キャンセル": "キャンセル",
   "グ": "グ",
   "シ": "シ",
+  "ホーム画面に追加": "ホーム画面に追加",
   "ル": "ル",
   "レ": "レ",
   "レシグル": "レシグル",
